# cpp_tools

./: CMakeLists.txt  README.md
cmake/: cpp_tools_cmake_create_target_cpp_tools_core_math_standard_backend_headers.cmake  cpp_tools_cmake_create_target_cpp_tools_core_math_standard_backend_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_math_std_backend_headers.cmake  cpp_tools_cmake_create_target_cpp_tools_core_math_std_backend_obj.cmake
cmake/Modules/: GenerateRecursiveAggregateHeadersToUpperDirForEachLevel.cmake
cmake/core/: cpp_tools_cmake_create_target_cpp_tools_core_math_standard_backend_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_string_standard_backend_headers.cmake  cpp_tools_cmake_create_target_cpp_tools_core_string_standard_backend_obj.cmake
cmake/core/container/: cpp_tools_cmake_create_target_cpp_tools_core_container_obj.cmake
cmake/core/container/standard/: cpp_tools_cmake_create_target_cpp_tools_core_container_standard_obj.cmake
cmake/core/container/standard/backend/: cpp_tools_cmake_create_target_cpp_tools_core_container_standard_backend_headers.cmake  cpp_tools_cmake_create_target_cpp_tools_core_container_standard_backend_obj.cmake
cmake/core/container/standard/traits/: cpp_tools_cmake_create_target_cpp_tools_core_container_standard_traits_headers.cmake  cpp_tools_cmake_create_target_cpp_tools_core_container_standard_traits_obj.cmake
cmake/core/file/: cpp_tools_cmake_create_target_cpp_tools_core_file_obj.cmake
cmake/core/file/standard/: cpp_tools_cmake_create_target_cpp_tools_core_file_standard_obj.cmake
cmake/core/file/standard/backend/: cpp_tools_cmake_create_target_cpp_tools_core_file_standard_backend_headers.cmake  cpp_tools_cmake_create_target_cpp_tools_core_file_standard_backend_obj.cmake
cmake/core/math/: cpp_tools_cmake_create_target_cpp_tools_core_math_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_math_standard_backend_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_math_standard_obj.cmake
cmake/core/math/standard/: cpp_tools_cmake_create_target_cpp_tools_core_math_standard_obj.cmake
cmake/core/math/standard/backend/: cpp_tools_cmake_create_target_cpp_tools_core_math_standard_backend_obj.cmake
cmake/core/string/: cpp_tools_cmake_create_target_cpp_tools_core_string_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_string_standard_backend_obj.cmake  cpp_tools_cmake_create_target_cpp_tools_core_string_standard_obj.cmake
cmake/core/string/standard/: cpp_tools_cmake_create_target_cpp_tools_core_string_standard_obj.cmake
cmake/core/string/standard/backend/: cpp_tools_cmake_create_target_cpp_tools_core_string_standard_backend_obj.cmake
cmake/tools/: cpp_tools_cmake_create_aggregate_object_target.cmake
docs/chs/: architecture.md  architecture_specification.md
docs/raw_eng/: architecture.md
include/: cpp_tools.hpp
include/cpp_tools/: core.hpp  cpp_tools.hpp  framework.hpp  modules.hpp
include/cpp_tools/core/: container.hpp  core.hpp  file.hpp  math.hpp  string.hpp  traits.hpp
include/cpp_tools/core/container/: container.hpp  standard.hpp
include/cpp_tools/core/container/standard/: backend.hpp  standard.hpp  traits.hpp
include/cpp_tools/core/file/: file.hpp  standard.hpp
include/cpp_tools/core/file/standard/: backend.hpp  standard.hpp
include/cpp_tools/core/math/: math.hpp  standard.hpp  std.hpp
include/cpp_tools/core/math/standard/: backend.hpp  standard.hpp  std.hpp
include/cpp_tools/core/math/std/: backend.hpp
include/cpp_tools/core/string/: function.hpp  standard.hpp  string.hpp
include/cpp_tools/core/string/function/: trim.h
include/cpp_tools/core/traits/: array_traits.h  traits.hpp
include/cpp_tools/framework/: audio.hpp  benchmark.hpp  console.hpp  copy.hpp  filler.hpp  framework.hpp  math.hpp  print.hpp  string.hpp
include/cpp_tools/framework/benchmark/: backend.hpp  benchmark.hpp
include/cpp_tools/framework/console/: algorithm.hpp  console.hpp
include/cpp_tools/framework/copy/: backend.hpp  copy.hpp
include/cpp_tools/framework/filler/: backend.hpp  filler.hpp
include/cpp_tools/framework/math/: backend.hpp  benchmark.hpp  math.hpp
include/cpp_tools/framework/print/: backend.hpp  print.hpp
include/cpp_tools/framework/string/: algorithm.hpp  string.hpp
include/cpp_tools/modules/: audio.hpp  benchmark.hpp  console.hpp  modules.hpp
include/cpp_tools/modules/audio/: audio.hpp  ffmpeg.hpp  mapper.hpp  sdl.hpp
include/cpp_tools/modules/benchmark/: benchmark.hpp  domain.hpp
include/cpp_tools/modules/console/: backend.hpp  console.hpp  pipeline.hpp  platform.hpp
include/cpptools/: core.hpp  framework.hpp  modules.hpp
include/cpptools/core/: core.hpp  math.hpp  string.hpp
include/cpptools/core/math/: math.hpp  std.hpp
include/cpptools/core/string/: function.hpp  string.hpp
include/cpptools/framework/: console.hpp  framework.hpp  string.hpp
include/cpptools/framework/console/: algorithm.hpp  backend.hpp  console.hpp
include/cpptools/framework/string/: algorithm.hpp  backend.hpp  string.hpp
include/cpptools/modules/: audio.hpp  console.hpp  modules.hpp
include/cpptools/modules/audio/: audio.hpp  ffmpeg.hpp  mapper.hpp  sdl.hpp
include/cpptools/modules/console/: backend.hpp  console.hpp  pipeline.hpp  platform.hpp
(+191 files in other folders)
